<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:background="#FCFCFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="60dp">

        <TextView
            android:id="@+id/txtGenerales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingStart="18dp"
            android:paddingTop="16dp"
            android:paddingEnd="18dp"
            android:paddingBottom="16dp"
            android:text="@string/txt_generales"
            android:textColor="#1B72C0" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/SwModoOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:text="@string/txt_modo_oscuro" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/SwNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:text="@string/txt_notificaciones_settings" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>