<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/tituloLogin"
        android:includeFontPadding="false"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="565dp"
        android:height="60dp"
        android:fontFamily="@font/fira_sans_bold"
        android:gravity="top"
        android:letterSpacing="0"
        android:text="@string/titulo_login"
        android:textColor="#E4DBDB"
        android:textSize="38sp"
        app:flow_verticalAlign="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="115dp" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="18dp"
        android:autofillHints="name"
        android:background="@drawable/edittext_rounded_background"
        android:ems="17"
        android:fontFamily="@font/poppins"
        android:hint="@string/txt_usuario_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloLogin" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:autofillHints='"name"'
        android:background="@drawable/edittext_rounded_background"
        android:ems="17"
        android:fontFamily="@font/poppins"
        android:hint="@string/txt_password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <TextView
        android:id="@+id/txtOlvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_olvido"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="303dp"
        android:background="@drawable/button_rounded_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_ingresar"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOlvido"
        app:strokeColor="#212121" />

</androidx.constraintlayout.widget.ConstraintLayout>